--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <!-- Start writing your project code in this file! -->
-<DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
+  <head>
+    <title>Portfolio</title>
+  </head>
+  <body>
+  </body>
+    
     
 </html>
