--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </style>
   <body>
     <h1>Welcome to Urwah's Design Portfolio<h1>
+    <div>
+      <a href="">About me</a>
+      <a href="">Portfolio</a>
+      <a href="">Get in touch</a>
+    </div>
+  
   </body>
     
     
