--- a/index.html
+++ b/index.html
@@ -5,12 +5,36 @@
     <title>Portfolio</title>
   </head>
   <style>
+    
+       html {
+      background-color: #594157;
+    }
+
+    h1 {
+      color: #7D8CC4;
+    }
+
+    a {
+      text-align: center;
+      color: #BEE7E8;
+      background-color: #726DA8;
+      display: block;
+      border: #726DA8;
+      border-style: outset;
+      width: 125px;
+      height: 24px;
+      padding: 6px;
+      margin: 10px;
+
+
+
   </style>
+  
   <body>
     <h1>Welcome to Urwah's Design Portfolio<h1>
     <div>
-      <a href="">About me</a>
-      <a href="">Portfolio</a>
+      <a href="">About me</a> 
+      <a href="">Portfolio</a> 
       <a href="">Get in touch</a>
     </div>
   
