--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <style>
     
        html {
-      background-color: #594157;
+      background: linear-gradient( 90deg,#7D8CC4,#BEE7E8);
     }
+
 
     h1 {
       color: #7D8CC4;
