added style on heading

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
        html {
       background: linear-gradient( 90deg,#7D8CC4,#BEE7E8);
     }
-
-
+    
     h1 {
       color: #7D8CC4;
+      text-align: center;
     }
 
     a {
