Update style on "a"

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 
     a {
       text-align: center;
+      text-decoration: none;
       color: #BEE7E8;
       background-color: #726DA8;
       display: block;
@@ -26,6 +27,7 @@
       height: 24px;
       padding: 6px;
       margin: 10px;
+    }
 
 
 
