convert image into button

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   
   <body>
     <div>
-      <img src="logo.png">
+      <a href= "#"><img src="logo.png"></a>
     </div>
     <h1>Welcome to Urwah's Design Portfolio<h1>
     <div>
