added float in paragraph

--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
     p {
         margin-left: 78px;
         font-family: 'Macondo', cursive;
+        float: left;
+      font-size: 32px;
+      
     }
 
 
