added the same font on link(p)

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <h1>Welcome to Urwah's Design Portfolio</h1>
       <p>Hello, My name is Urwah Adil.<br> I am a Fashion Designer and<br>
          alot more which 
-        you can read <br><a href="Aboutme.html">here</a>.
+        you can read <br><a style= "font-size: 32px;" href="Aboutme.html">here</a>.
      </p>
     
     <div1>
