Removed extra closing tag a

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
   </style>
   <body>
     <div>
-     <a href='#'></a><img src="logo.png"></a>
+     <a href='#'><img src="logo.png"></a>
       </div>
       <h1>Welcome to Urwah's Design Portfolio</h1>
       <p>Hello, My name is Urwah Adil.<br> I am a Fashion Designer and<br>
