--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
     <title>Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/c96d159cc1.js" crossorigin="anonymous"></script>
   </head>
   <style>
    
