--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     </div>
 
     <ul>
-      <li><a href='#'>Linkedin</a></li>
+      <li><a href='#'><i class="fa-brands fa-linkedin"></a></li>
       <li><a href='#'>Instagram</a></li>
       <li><a href='#'>Facebook</a></li>
     </ul>
