--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
     <ul>
       <li><a href='#'><i class="fa-brands fa-linkedin"></a></li>
-      <li><a href='#'>Instagram</a></li>
+      <li><a href='#'><i class="fa-brands fa-instagram"></a></li>
       <li><a href='#'>Facebook</a></li>
     </ul>
    
