--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     <ul>
       <li><a href='#'><i class="fa-brands fa-linkedin"></a></li>
       <li><a href='#'><i class="fa-brands fa-instagram"></a></li>
-      <li><a href='#'>Facebook</a></li>
+      <li><a href='#'><i class="fa-brands fa-facebook"></a></li>
     </ul>
    
   
