Updated link of the page

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
      </p>
     
     <div1>
-      <a href="Aboutme.html">About me</a>
+      <a href="About.html">About me</a>
     </div1>
      <div2>
       <a href="">Portfolio</a>
