--- a/GetinTouch.html
+++ b/GetinTouch.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Aboutme</title>
+    <title>Contact</title>
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
     
 <style>
