--- a/About.html
+++ b/About.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>AboutUrwah</title>
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c96d159cc1.js" crossorigin="anonymous"></script>
 <style>
