updated Image link

--- a/About.html
+++ b/About.html
@@ -120,7 +120,7 @@ img {
 </head>
 
   <body>
-     <a style="padding: 0px;" href="TitlePage1.html"><img src="URWALOGO1.png" class="logo">
+     <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
        <ul>
          <li></a></li></div>
          <li><a href="#">About me</a></li>
@@ -131,7 +131,7 @@ img {
 
      <div class="main">
    
-      <img style="padding-left: 10vh;" src="h659.png">
+      <img style="padding-left: 10vh;" src="images/h659.png">
       <p>Hey, My name is Urwah Adil. I am a Fashion<br> Designer and done my B.S(Fashion Design &<br>Technology)in 2015.<br>
          <br>
       I am basically from Pakistan and moved to<br> Sweden in 2019.I am happily married with<br> Adil Khan
