--- a/GetinTouch.html
+++ b/GetinTouch.html
@@ -13,7 +13,7 @@
     }
 
     html {
-      background-image: url(imagebg.jpg);
+      background-image: url(images/imagebg.jpg);
 
     }
 
@@ -150,7 +150,7 @@ p {
   </style>
 </head>
 <body>
-    <a style="padding: 0px;" href="TitlePage1.html"><img src="URWALOGO1.png" class="logo">
+    <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
         <ul>
             <li></a></li></div>
             <li><a href="About.html">About me</a></li>
