--- a/TitlePage1.html
+++ b/TitlePage1.html
@@ -17,7 +17,7 @@
    }
 
    html {
-    background-image: url(imagebg.jpg);
+    background-image: url(images/imagebg.jpg);
     backdrop-filter: blur(30%);
      
     }
@@ -120,7 +120,7 @@
   </style>
   <body>
     <div>
-     <a href='#'><img src="URWALOGO1.png"></a>
+     <a href='#'><img src="images/URWALOGO1.png"></a>
       </div>
       <h2>Welcome to Urwah's Design Portfolio</h2>
       <p>Hello, My name is Urwah Adil.<br> I am a Fashion Designer and<br>
@@ -138,7 +138,7 @@
       <a href="Contact.html">Get in touch</a>
     </div3>
     <div>
-        <img src="main.jpg" class="main">
+        <img src="images/main.jpg" class="main">
     </div>
 
     <ul>
