--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
         
     }
     html {
-      background-image: url(imageBg.jpg);
+      background-image: url(images/imageBg.jpg);
       width: 100%;
       background-size: cover;
    
@@ -130,12 +130,12 @@ div {
 
   <body>
    
-   <a style="padding: 0px;" href="TitlePage1.html"><img src="URWALOGO1.png" class="logo">
+   <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
  <ul>
      <li></a></li></div>
      <li><a href="About.html">About me</a></li>
-     <li><a href="#">Portfolio</a></li>  
-     <li><a href="#">Get in Touch</a></li>
+     <li><a href="portfolio.html">Portfolio</a></li>  
+     <li><a href="Getintouch.html">Get in Touch</a></li>
  </ul>
  <main>
    <h1 style="text-align: center;">Calligraphy</h1>
@@ -149,9 +149,9 @@ div {
       in a beautiful way.
    </p>
 
-    <div><img src="cal1 (2).jpg" style="width:321px ; height: 244px;"></div>
-    <div><img src="cal1 (6).jpg" style="width:321px ; height: 244px;"></div>
-    <div><img src="cal1.jpg" style="width:321px ; height: 244px;"></div> 
+    <div><img src="images/cal1 (2).jpg" style="width:321px ; height: 244px;"></div>
+    <div><img src="images/cal1 (6).jpg" style="width:321px ; height: 244px;"></div>
+    <div><img src="images/cal1.jpg" style="width:321px ; height: 244px;"></div> 
  </main>
  <main class="Fashion">
    <h1 style="text-align: center;">Fashion Illustration</h1>
@@ -160,11 +160,11 @@ div {
       Fashion sketching. 
       It is mainly used by fashion designers to brainstorm their ideas on paper 
       or digitally.</p>
-   <div><img src="1img.jpg" class="illustration"></div>
-   <div><img src="2img.jpg" class="illustration"></div>
-   <div><img src="3img.jpg" class="illustration"></div>
-   <div><img src="4img.jpg" class="illustration"></div>
-   <div><img src="8img.jpg" class="illustration"></div>
+   <div><img src="images/1img.jpg" class="illustration"></div>
+   <div><img src="images/2img.jpg" class="illustration"></div>
+   <div><img src="images/3img.jpg" class="illustration"></div>
+   <div><img src="images/4img.jpg" class="illustration"></div>
+   <div><img src="images/8img.jpg" class="illustration"></div>
  </main>
  <main class="Sketches">
    <h1 style="text-align: center;">Rough Sketches</h1>
@@ -175,9 +175,9 @@ div {
       or digitally.</p>
    
    
-   <div><img src="cal1 (3).jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="cal1 (5).jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="cal2.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/cal1 (3).jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/cal1 (5).jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/cal2.jpg" style="width: 250px; height: 350px;"></div>
  </main>
  <main class="boards">
    <h1 style="text-align: center;">Boards</h1>
@@ -188,14 +188,14 @@ div {
       allow to collect thoughts, ideas from places one visits, colours etc.</p>
    
    
-   <div><img src="board1.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="board2.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="Boarda.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="Boardb.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="Boardc.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="Boardd.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="Boardone.jpg" style="width: 250px; height: 350px;"></div>
-   <div><img src="trend-forecast.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/board1.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/board2.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/Boarda.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/Boardb.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/Boardc.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/Boardd.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/Boardone.jpg" style="width: 250px; height: 350px;"></div>
+   <div><img src="images/trend-forecast.jpg" style="width: 250px; height: 350px;"></div>
  </main>
    
    
