--- a/About.html
+++ b/About.html
@@ -123,9 +123,9 @@ img {
      <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
        <ul>
          <li></a></li></div>
-         <li><a href="#">About me</a></li>
+         <li><a href="About.html">About me</a></li>
          <li><a href="portfolio.html">Portfolio</a></li>  
-         <li><a href="Contact.html">Get in Touch</a></li>
+         <li><a href="Getintouch.html">Get in Touch</a></li>
       </ul>
  
 
