--- a/About.html
+++ b/About.html
@@ -147,10 +147,9 @@ img {
      </div>
      <img src=>
      <ul class="wrapping">
-      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='#'><i class="fa-brands fa-linkedin"></i></a></li>
-      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='www.instagram.com/urwahaider/'><i 
-         class="fa-brands fa-instagram"></i></a></li>
-      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='#'><i class="fa-brands fa-facebook"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.linkedin.com/in/urwa-adil-2924bab2/'><i class="fa-brands fa-linkedin"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.instagram.com/urwahaider/'><i class="fa-brands fa-instagram"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.facebook.com/urwa.haider.3'><i class="fa-brands fa-facebook"></i></a></li>
     </ul>
 
   </body>
