--- a/GetinTouch.html
+++ b/GetinTouch.html
@@ -152,7 +152,6 @@ p {
 <body>
     <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
         <ul>
-            <li></a></li></div>
             <li><a href="About.html">About me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>  
             <li><a href="Getintouch.html">Get in Touch</a></li>
@@ -204,9 +203,9 @@ p {
   </div>
  </main>
  <ul class="wrapping">
-    <li style="display: inline-block;"><a style="color: #7A6C5D;" href='#'><i class="fa-brands fa-linkedin"></i></a></li>
-    <li style="display: inline-block;"><a style="color: #7A6C5D;" href='#'><i class="fa-brands fa-instagram"></i></a></li>
-    <li style="display: inline-block;"><a style="color: #7A6C5D;" href='#'><i class="fa-brands fa-facebook"></i></a></li>
-  </ul>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.linkedin.com/in/urwa-adil-2924bab2/'><i class="fa-brands fa-linkedin"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.instagram.com/urwahaider/'><i class="fa-brands fa-instagram"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.facebook.com/urwa.haider.3'><i class="fa-brands fa-facebook"></i></a></li>
+   </ul>
 </body>
 </html>
