--- a/TitlePage1.html
+++ b/TitlePage1.html
@@ -141,11 +141,11 @@
         <img src="images/main.jpg" class="main">
     </div>
 
-    <ul>
-      <li><a href='#'><i class="fa-brands fa-linkedin"></i></a></li>
-      <li><a href='#'><i class="fa-brands fa-instagram"></i></a></li>
-      <li><a href='#'><i class="fa-brands fa-facebook"></i></a></li>
-    </ul>
+   <ul class="wrapping">
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.linkedin.com/in/urwa-adil-2924bab2/'><i class="fa-brands fa-linkedin"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.instagram.com/urwahaider/'><i class="fa-brands fa-instagram"></i></a></li>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.facebook.com/urwa.haider.3'><i class="fa-brands fa-facebook"></i></a></li>
+   </ul>
    
   
   </body>
