--- a/GetinTouch.html
+++ b/GetinTouch.html
@@ -150,7 +150,7 @@ p {
   </style>
 </head>
 <body>
-    <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
+    <a style="padding: 0px;" href="index.html"><img src="images/URWALOGO1.png" class="logo">
         <ul>
             <li><a href="About.html">About me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>  
