--- a/About.html
+++ b/About.html
@@ -120,7 +120,7 @@ img {
 </head>
 
   <body>
-     <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo">
+     <a style="padding: 0px;" href="index.html"><img src="images/URWALOGO1.png" class="logo">
        <ul>
          <li></a></li></div>
          <li><a href="About.html">About me</a></li>
