added new div and  more text

--- a/About.html
+++ b/About.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="Csssheet.css">
 </head>
 
+
   <body>
      <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo" alt="logo of Urwah">
        <ul>
@@ -30,9 +31,17 @@
       to soul. I 
       enjoy hiking since it keeps me <br> grounded and my hobby is Calligraphy.
       </p>
-    
       
      </div>
+  
+<div class="container">
+  <img src="images/imageBg.jpg" alt="color background" class="image" style="width:100%">
+  <div class="middle">
+    <div class="text">I have expertise in <b>Adobe Photoshop</b>, <b>Illustrator</b>, <b>Draping</b>, <b>Pattern Making</b> and <b>Weaving</b>.
+      <br>Now i have knowledge in <b>Web-developing</b> & <b>Progamming<b> too.
+    </div>
+  </div>
+</div>
      <ul class="wrapping">
       <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.linkedin.com/in/urwa-adil-2924bab2/'><i class="fa-brands fa-linkedin"></i></a></li>
       <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.instagram.com/urwahaider/'><i class="fa-brands fa-instagram"></i></a></li>
