--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   </style>
   <body>
     <div>
-     <a href='#'><img src="images/URWALOGO1.png" alt="Logo of Urwah"></a>
+     <a href='index.html'><img src="images/URWALOGO1.png" alt="Logo of Urwah"></a>
       </div>
       <h2>Welcome to Urwah's Design Portfolio</h2>
       <p>Hello, My name is Urwah Adil.<br> I am a Fashion Designer and<br>
