--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 
   <body>
    
-   <a style="padding: 0px;" href="TitlePage1.html"><img src="images/URWALOGO1.png" class="logo" alt="logo of Urwah"></a>
+   <a style="padding: 0px;" href="index.html"><img src="images/URWALOGO1.png" class="logo" alt="logo of Urwah"></a>
  <ul>
      <li><a href="About.html">About me</a></li>
      <li><a href="portfolio.html">Portfolio</a></li>  
