--- a/About.html
+++ b/About.html
@@ -35,7 +35,7 @@
      </div>
   
 <div class="container">
-  <img src="images/imageBg.jpg" alt="color background" class="image" style="width:100%">
+  <img src="background.jpg (2).jpg" alt="color background" class="image" style="width:100%">
   <div class="middle">
     <div class="text">I have expertise in <b>Adobe Photoshop</b>, <b>Illustrator</b>, <b>Draping</b>, <b>Pattern Making</b> and <b>Weaving</b>.
       <br>Now i have knowledge in <b>Web-developing</b> & <b>Progamming<b> too.
