--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
  <ul>
      <li><a href="About.html">About me</a></li>
      <li><a href="portfolio.html">Portfolio</a></li>  
-     <li><a href="Getintouch.html">Get in Touch</a></li>
+     <li><a href="GetinTouch.html">Get in Touch</a></li>
  </ul>
  <main>
    <h1 style="text-align: center;">Calligraphy</h1>
