--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
       <a href="portfolio.html">Portfolio</a>
      </div2>
      <div3>
-      <a href="GetinTouch.html">Get in touch</a>
+      <a href="contact.html">Get in touch</a>
     </div3>
     <div>
         <img src="images/main.jpg" class="main" alt="fashion illustration">
