--- a/portfolio.html
+++ b/portfolio.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Aboutme</title>
+    <title>Portfolio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Macondo&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/c96d159cc1.js" crossorigin="anonymous"></script>
@@ -14,7 +14,7 @@
  <ul>
      <li><a href="About.html">About me</a></li>
      <li><a href="portfolio.html">Portfolio</a></li>  
-     <li><a href="GetinTouch.html">Get in Touch</a></li>
+     <li><a href="contact.html">Get in Touch</a></li>
  </ul>
  <main>
    <h1 style="text-align: center;">Calligraphy</h1>
