--- a/About.html
+++ b/About.html
@@ -46,7 +46,10 @@
       <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.linkedin.com/in/urwa-adil-2924bab2/'><i class="fa-brands fa-linkedin"></i></a></li>
       <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.instagram.com/urwahaider/'><i class="fa-brands fa-instagram"></i></a></li>
       <li style="display: inline-block;"><a style="color: #7A6C5D;" href='https://www.facebook.com/urwa.haider.3'><i class="fa-brands fa-facebook"></i></a></li>
-   </ul>
+      <br>
+      <li style="display: inline-block;"><a style="color: #7A6C5D;"
+      href='https://mail.google.com/mail/u/0/'><i class="fa-solid fa-envelope"></i>urwa06haider@gmail.com</a></li>
+    </ul>
 
   </body>
 </html>
