--- a/contact.html
+++ b/contact.html
@@ -239,6 +239,9 @@ p {
 
      <li style="display: inline-block;"><a style="color: #7A6C5D;"
       href='https://mail.google.com/mail/u/0/'><i class="fa-solid fa-envelope"></i></a></li>
+        <br>
+     <li style="display: inline-block;"><a style="color: #7A6C5D;"
+      href='https://mail.google.com/mail/u/0/'><i class="fa-solid fa-envelope"></i>urwa06haider@gmail.com</a></li>
 </ul>
 
 </body>
