--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    }
 
    html {
-    background-image: url(imagebg.jpg);
+    background-image: url(images/imagebg.jpg);
     backdrop-filter: blur(30%);
      
     }
