--- a/contact.html
+++ b/contact.html
@@ -180,7 +180,7 @@ p {
         <ul>
             <li><a href="About.html">About me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>  
-            <li><a href="GetinTouch.html">Get in Touch</a></li>
+            <li><a href="contact.html">Get in Touch</a></li>
         </ul>
   <main>
    <div style="height: 650px;">
